# contextcache

./: .env.example  .gitignore  .pre-commit-config.yaml  3D_GRAPH_IMPLEMENTATION.md  AGENTS.md  ARCHITECTURE.md  BACKEND_DEPLOYMENT_GUIDE.md  CLEANUP_COMPLETE.md  CLOUDFLARE_BUILD_FIX.md  CLOUDFLARE_FIX.md  CLOUDFLARE_ISSUE.md  CLOUDFLARE_NOT_FOUND_ISSUE.md  CLOUDFLARE_PAGES_FIX.md  CLOUDFLARE_SETUP_GUIDE.md  CODE_OF-CONDUCT.md  CONTRIBUTING.md  CRITICAL_FIXES_NEEDED.md  CRYPTO_IMPLEMENTATION_SUMMARY.md  CURRENT_PROGRESS.md  DASHBOARD_FIX.md  DATABASE_SETUP.md  DEPLOYMENT-STATUS.md  DEPLOYMENT-VERIFICATION.md  DEPLOYMENT.md  DEPLOYMENT_BLOCKER.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INFO.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_TRIGGERED.md  DEPLOY_NOW.md  DIRECT-DEPLOYMENT.md  Dockerfile.docs  FINAL_FIX.md  FINAL_FIX_NEEDED.md  FINAL_STATUS.md  FIXES_APPLIED.md  FIX_500_ERROR.md  (+55 more)
.github/: ISSUE_TEMPLATE.md  renovate.json
api/: .dockerignore  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements-cloudrun.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt  run_worker.py  test_crypto.py  test_mcp_docs.py  test_mcp_extractor.py  test_memory_pack.py  test_recovery_kit.py  test_worker.py  verify_krl_imports.py
api/alembic/: env.py
api/alembic/versions/: 20260212_0001_initial_schema.py  20260219_0002_auth_alpha.py  20260219_0003_waitlist_schema_v2.py  20260219_0005_auth_login_events.py  20260219_0006_usage_counters.py  20260219_0007_user_is_unlimited.py  20260219_0008_memory_search_vector.py  20260219_0009_pgvector_and_embedding_metadata.py  20260220_0010_recall_logs.py  20260220_0011_recall_timings.py  20260220_0012_hilbert_index.py  20260223_0013_refinery_pipeline.py  20260224_0014_api_key_usage_tracking.py  20260225_0015_waitlist_profile_fields.py  20260225_0016_merge_heads.py  20260226_0017_plan_limits.py  20260226_0018_api_key_access_requests.py  20260226_0019_scale_foundations.py  20260227_0020_batch_action_runs.py  20260301_0020a_vercol.py  20260320_0021_ingest_reliability_and_batch_request.py  20260330_0022_context_compilations.py  20260331_0023_query_profiles_and_retrieval_feedback.py  20260405_0024_query_profile_auto_apply_controls.py  f36b427e433f_fix_memories_fk_to_users.py
api/app/: auth_routes.py  auth_utils.py  billing.py  create_admin.py  db.py  emailer.py  external_auth.py  inbox_routes.py  ingest_routes.py  main.py  migrate.py  models.py  rate_limit.py  recall.py  rotate_key.py  routes.py  schemas.py  seed.py  seed_mock_data.py  wait_for_db.py
api/app/analyzer/: __init__.py  _algorithm_fallback.py  _sfc_fallback.py  algorithm.py  cag.py  core.py  service_client.py  sfc.py
api/app/compiler/: __init__.py  mir.py
api/app/ingestion/: __init__.py  cocoindex_flow.py  pipeline.py
api/app/worker/: __init__.py  celery_app.py  tasks.py
api/cc_core/analyzers/: __init__.py  base.py  hybrid_bm25_dense.py  ppr_time_decay.py
api/cc_core/auth/: __init__.py  admin.py  clerk.py
api/cc_core/crypto/: __init__.py  argon2.py  blake3_hash.py  ed25519.py  encryption.py  hashing.py  signing.py  xchacha20.py
api/cc_core/mcp/: __init__.py  audit_server.py  base.py  docs_server.py  extractor_server.py  memory_server.py  policy_gate.py
api/cc_core/mcp/audit_server/: __init__.py  server.py
api/cc_core/mcp/docs_server/: __init__.py  server.py
api/cc_core/mcp/extractor_server/: __init__.py  server.py
api/cc_core/mcp/memory_server/: __init__.py  server.py
api/cc_core/mcp/policy_gate/: __init__.py  server.py
api/cc_core/middleware/: __init__.py  authorization.py  error_handler.py
api/cc_core/models/: __init__.py  audit.py  chunk.py  document.py  entity.py  fact.py  project.py  provenance.py  relation.py  usage.py  user.py  user_settings.py
api/cc_core/rate_limit/: __init__.py
api/cc_core/services/: README_KRL.md  __init__.py  document_service.py  embedding_service.py  encryption_service.py  explain.py  export.py  ingest.py  key_service.py  krl_service.py  llm_service.py  memory_pack.py  ollama_service.py  rag_cag_service.py  ranking.py  recovery_kit.py  usage_service.py
api/cc_core/storage/: __init__.py  database.py  schema.sql
api/cc_core/storage/adapters/: __init__.py  base.py  postgres.py
api/cc_core/worker/: main.py  settings.py  tasks.py
api/examples/: krl_usage_example.py
api/migrations/: 001_add_multi_tenant_auth.sql  002_add_content_encryption.sql  003_add_user_id_to_projects.sql
api/scripts/: backfill_hilbert.py  create_api_key.py  private_engine_spec.py  seed_mock_data.py  strip_private_engine_lock.py
api/tests/: conftest.py  pytest.ini  test_api_schema.py  test_auth.py  test_cag_cache.py  test_crypto_properties.py  test_integration.py  test_login_events.py  test_mir.py
api/tests/integration/: test_end_to_end.py  test_explain_service.py  test_export_service.py  test_ingest_service.py
api/tests/unit/: README.md  test_crypto.py  test_documents.py  test_projects.py
api/worker/: worker.py
cli/: cc.py  pyproject.toml  requirements.txt  sdk.py
docs/: 00-overview.md  01-mvp-scope.md  02-architecture.md  03-data-model.md  04-api-contract.md  05-aco-cache.md  05-dev-workflow.md  06-deployment.md  07-security.md  08-roadmap.md  09-cli-sdk.md  10-integrations.md  11-branding.md  12-refinery-and-toon.md  13-production-hardening.md  14-admin-ux.md  15-security-audit.md  16-fk-safe-bigint-migration.md  17-operations-runbook.md  18-brain-graph-production.md  19-ui-quality-gates.md  20-external-auth.md  21-product-vision.md  22-memory-compiler-architecture.md  23-migration-from-recall-to-compiler.md  24-mir-spec.md  404.md  README.md  api-reference.md  architecture.md  benchmarks.md  cookbook.md  data-model.md  deployment.md  index.md  legal.md  mcp.md  mint.json  overview.md  quickstart.md  (+4 more)
extension/: manifest.config.ts  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/: .env.example  .env.production  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  CLOUDFLARE-PAGES-SETUP.md  DEPLOYMENT.md  UI_UPGRADE_GUIDE.md  (+11 more)
(+520 files in other folders)
