[project]
name = "contextcache-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",

  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
]


[tool.uv]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "asgi-lifespan>=2.1.0",
]
