[project]
name = "contextcache-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",

  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "boto3>=1.35",
  "pgvector>=0.3.6",
  "redis>=5.0",
]


[tool.uv]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "asgi-lifespan>=2.1.0",
  "black>=24.8",
  "flake8>=7.0",
  "bandit>=1.7",
  "pip-audit>=2.7",
]
