[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextcache-sdk"
version = "0.2.0"
description = "Python SDK for TheContextCache API"
readme = "../README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["sdk"]
